[project]
name = "mcp-weather"
version = "0.1.0"
description = "Weather forecast tool for MCP"
authors = []
dependencies = [
    "fastmcp",
    "python-dotenv",
    "aiohttp",
    "uvicorn",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-weather"
version = "0.2.0"
authors = [
    { name = "Khidir Ahmed" },
]
description = "Weather MCP server using AccuWeather API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openmcp",
    "python-dotenv",
    "aiohttp",
]

[project.scripts]
weather-mcp = "src.main:main"

[tool.setuptools]
packages = ["src"]

[project.scripts]
mcp-weather = "mcp_weather.weather:mcp.run"
